pretty much done

--- a/individual/digital/digital.html
+++ b/individual/digital/digital.html
@@ -35,3 +35,73 @@
 <hr>
     </div>
 </div>
+<!--content start-->
+<div class="content">
+    <h2 class="heading">My Artwork</h2>
+    <p class="description">I have always had a personal passion for digital illustration. Some of the work shown
+        includes logos that I have created, animation, and some art that I do for fun. 
+    </p>
+    <h2 class="heading">Logo Design</h2>
+    <p class="description">I designed my personal business logo to be a simple yet easily identifiable one.
+        The M is my first initial (Maya), and the circle that contains it represents my dynamic and creative
+        qualities. 
+    </p>
+    <img src="../images/logo5.jpg" class="logo1">
+    <img src="../images/alllogos.jpg" class="logo2">
+    <p class="description">A while back, I decided to do a study by designing logos for a potential ice
+        cream business. I started with a rough sketch to get a general idea of what I was going to do,
+        then created a colored version.
+    </p>
+    <figure><img src="../images/roughlogo.jpg" class="ice1"><figcaption>Rough draft of logo ideas.</figcaption></figure>
+    <figure><img src="../images/logo.jpg" class="ice2"><figcaption>Final version with color. </figcaption></figure>
+    <h2 class="heading">Animation</h2>
+    <p class="description">I followed some tutorials to learn how to animate using the program 
+        <a href="https://krita.org/en/" id="krita">Krita</a>. My first animation was a figure of a horse running.
+        </p>
+        <img src="../images/horse.gif" class="horse">
+        <h2 class="heading">Digital Illustration</h2>
+        <p class="description">Here, I will be showcasing some of my personal artwork that I have done for fun!
+            I mainly enjoy doing sketches of my favorite characters.
+            </p>
+        </div>
+        <div class="align">  
+        <figure class="flex"><img src="../images/lineart.jpg" class="line">
+        <img src="../images/shounen1.jpg" class="shounen"></figure><figcaption>Lineart 
+            and colored sketch of a young man. 
+        </figcaption>
+    </div>  
+        <figure><img src="../images/birb.jpg" class="birb"><figcaption>Illustration of
+            a bird.
+        </figcaption></figure>
+        <figure><img src="../images/kaeyaanddiluc.jpg" class="kd"><figcaption>Kaeya and
+            Diluc from Genshin Impact. 
+        </figcaption></figure>
+        
+        <figure><img src="../images/diluc.jpg" class="diluc" class="diluc"><figcaption id="last">
+            Diluc from Genshin Impact.
+        </figcaption></figure>
+    </div>
+    <div class="back">
+    <div class="content" id="white">
+        
+    <h2 class="heading">Art is a Way for Me to Express Myself.</h2>
+    <p class="description">I love art because of the freedom it gives you. As long as I have a 
+        white canvas in front of me, I see endless possibilities. My dreams, my passions,
+        and my ideas can all be expressed through art. Not only that, but art tells a story. It sends 
+        a message, and anyone who sees it feels that emotion through the canvas. Art doesn't have
+        a language barrier, either, meaning it allows for us to communicate with people across the world.
+        Design works in the same way that it can speak to the hearts of people. If done the right way,
+        design can help those people reach the hearts of others, too. My dream is to create designs which can 
+        help people all across the world connect with each other. 
+    </p>
+</div>
+</div>
+    <hr>
+    <div class="icons">
+        <a href="https://www.linkedin.com/in/maya-totonchi-a4052823a/"><i class="uil uil-linkedin-alt" id="linkedin"></i></a>
+        <a href="https://instagram.com/mayatoton?igshid=YmMyMTA2M2Y="><i class="uil uil-instagram" id="instagram"></i></a>
+        </div>
+        </body>
+        </html>
+    </body>
+    </html>
