--- a/individual/photo/photo.html
+++ b/individual/photo/photo.html
@@ -37,7 +37,7 @@
   <figure><img src="../images/fountain.jpg" class="photo" id="fountain"><img src="../images/sakura.JPG" class="photo" id="sakura"><img src="../images/books.jpg" class="photo" id="books"></figure>
   <figure><img src="../images/vend.jpg" class="photo" id="vend"><img src="../images/square.jpg" class="photo" id="square"><img src="../images/sunset.jpg" class="photo" id="sunset"></figure>
   <figure><img src="../images/roofs.jpg" class="photo" id="owange"><img src="../images/flowers.jpg" class="photo" id="rain"><img src="../images/graduation.jpg" class="photo" id="jar"></figure>
-  <figure><img src="../images/ceiling.jpg" class="photo" id="owange"><img src="../images/rain.png" class="photo" id="rain"><img src="../images/jar2.jpg" class="photo" id="jar"></figure>
+  <figure><img src="../images/rain.png" class="photo" id="owange"><img src="../images/spiral.jpg" class="photo" id="rain"><img src="../images/jar2.jpg" class="photo" id="jar"></figure>
   
 </div>
 <hr>
