--- a/individual/web/web.html
+++ b/individual/web/web.html
@@ -87,7 +87,7 @@ main site. Checking "remember me" will save your info for the next time you log 
     username and password.
 </figcaption></figure>
 <p class="description"> The main page contains a navbar which links to their respective websites, and a drop down
-    menu allows one to access to all other labs. The home page is a carousel which 
+    menu allows one to access all other labs. The home page is a carousel which 
     automatically slides over to the next image every 7 seconds. 
     <figure><img src="../images/dash2.png" class="dash"><figcaption> The dashboard includes a nav bar and
         an automatic carousel. 
