--- a/individual/photo/photo.html
+++ b/individual/photo/photo.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content=""width=device-width, initial-scale="1.0">
     <title>Individual Project</title>
+    <link rel="icon" href="images/logo5.jpg">
     <link rel="stylesheet" href="photo.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
