--- a/individual/about/about.html
+++ b/individual/about/about.html
@@ -31,14 +31,14 @@
     <div class="about">
         <img src="../images/57_20220527090452 (1).jfif" alt="me" id="me">
         <div class="hello fadeOutUp">Nice to meet you ✌️</div>
-        <br><div class="text2 fadeIn">I am a prospective <span>Interactive Media Design</span> major at the University of
+        <br><div class="text2 fadeIn">I am an <span>Interactive Media Design</span> major at the University of
         Washington Bothell. My skills include web design, UX/UI, digital illustration, video 
         editing, logo design, photoshop, and photography. </div><br>
             <div class="text3 fadeIn">I am passionate about designing graphics and building apps which are inclusive, ethical, and accessible. 
-                I always prioritize ease of use and functionality when brainstorming ideas for my designs.
-                 </div><br><div class="text4 fadeIn">I am experienced with programs such as Adobe Illustrator, Photoshop, Premiere and Figma,
-                     as well as web development languages including HTML and CSS. I have a background in user experience and user research,
-                    team designing, and prototyping using Figma. </div><br> 
+                I always prioritize ease of use and functionality for my designs.
+                 </div><br><div class="text4 fadeIn">I am experienced with programs such as Adobe Illustrator, Photoshop, Premiere, and Figma,
+                     as well as coding languages including HTML and CSS. I have a background in user experience and user research,
+                    conducting user tests, collaborating in teams, and much more. </div><br> 
             <div class="text5 fadeIn">During my freetime, I enjoy listening to music, playing games with friends, and drawing!</div>
             <hr>
             <!--icons for socials-->
