--- a/individual/digital/digital.html
+++ b/individual/digital/digital.html
@@ -20,7 +20,7 @@
 <div class="home">
     <nav class="navbar navbar-expand-sm">
         <div class="max-width">
-            <a class="navbar-brand" href="../index.html"><img src="../images/logopurple.jpg" id="logoimage" width="5%"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../images/logofatpurp.png" id="logoimage" width="5%"></a>
             </div>
             <ul class="navbar-nav">
                 
@@ -30,9 +30,9 @@
     </nav>
 <!--intro for page-->
     <div class="intro">
-        <div class="hello fadeIn">Digital Illustration 
+        <div class="hello fadeIn">Logo Design & Illustration 
             <br>
-        <div class="text2 fadeOutUp">Featuring my artwork and animations.</div></div>
+        <div class="text2 fadeOutUp">Featuring my logo designs and artwork.</div></div>
 <hr>
     </div>
 </div>
@@ -40,7 +40,7 @@
 <div class="content">
     <h2 class="heading">My Artwork</h2>
     <p class="description">I have always had a personal passion for digital illustration. Some of the work shown
-        includes logos that I have created, animation, and some art that I do for fun. 
+        includes logos that I have created for projects, animation studies, and art that I do for fun. 
     </p>
     <h2 class="heading">Logo Design</h2>
     <p class="description">I designed my personal business logo to be a simple yet easily identifiable one.
@@ -55,6 +55,19 @@
     </p>
     <figure><img src="../images/roughlogo.jpg" class="ice1"><figcaption>Rough draft of logo ideas.</figcaption></figure>
     <figure><img src="../images/logo.jpg" class="ice2"><figcaption>Final version with color. </figcaption></figure>
+    <p class="description">I designed a logo for my video prototyping project "Wallify" for a course. The prototype was 
+        a wallpaper that can be freely customized using an application, so I used the layered squares to represent
+        the custom color aspect.
+    </p>
+    <div class="align">
+    <figure class="flex"><img src="../images/wallifywhite.png" id="wallifywhite">
+    <img src="../images/wallifyblack.png" id="wallifyblack"></figure></div>
+    <p class="description">I designed a logo for my video game project, "Kiga." The game is centered around mental
+        health represented by a flower, so I replaced the "I" with an image of a flower.
+    </p>
+    <div class="align">
+        <figure class="flex"><img src="../images/kigasimplelogocrop.png" id="wallifywhite">
+        <img src="../images/kigacoloredlogocrop.png" id="wallifyblack"></figure></div>
     <h2 class="heading">Animation</h2>
     <p class="description">I followed some tutorials to learn how to animate using the program 
         <a href="https://krita.org/en/" id="krita">Krita</a>. My first animation was a figure of a horse running.
@@ -67,20 +80,13 @@
         </div>
         <div class="align">  
         <figure class="flex"><img src="../images/lineart.jpg" class="line">
-        <img src="../images/shounen1.jpg" class="shounen"></figure><figcaption>Lineart 
-            and colored sketch of a young man. 
-        </figcaption>
+        <img src="../images/shounen1.jpg" class="shounen"></figure>
     </div>  
-        <figure><img src="../images/birb.jpg" class="birb"><figcaption>Illustration of
-            a bird.
-        </figcaption></figure>
-        <figure><img src="../images/kaeyaanddiluc.jpg" class="kd"><figcaption>Kaeya and
-            Diluc from Genshin Impact. 
-        </figcaption></figure>
-        
-        <figure><img src="../images/diluc.jpg" class="diluc" class="diluc"><figcaption id="last">
-            Diluc from Genshin Impact.
-        </figcaption></figure>
+        <figure><img src="../images/kaeyaanddiluc.jpg" class="kd"></figure>
+    <div class="align">  <figure class="flex">
+        <img src="../images/deja3.png" id="deja">
+        <img src="../images/robloxs.png" id="roblox"></figure>
+    </div> 
     </div>
     <div class="back">
     <div class="content" id="white">
